--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 backcall==0.2.0
+blinker==1.4
 click==7.1.2
 decorator==4.4.2
 dnspython==2.0.0
 email-validator==1.1.1
 Flask==1.1.2
+Flask-Mail==0.9.1
 Flask-WTF==0.14.3
 gunicorn==20.1.0
 idna==2.10
@@ -16,6 +18,7 @@ MarkupSafe==1.1.1
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==8.3.2
 prompt-toolkit==3.0.8
 ptyprocess==0.6.0
 Pygments==2.7.2
